k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloud-demo
    sandbox: learn-kubernetes
    learn-kubernetes: cloud-demo
  name: cloud-demo
spec:
  ports:
  - name: 8090-tcp
    port: 8090
    protocol: TCP
    targetPort: 8090
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: cloud-demo
  sessionAffinity: None
  type: ClusterIP
