k8/k8.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cloud-demo
  labels:
    app: cloud-demo
    sandbox: learn-kubernetes
    learn-kubernetes: cloud-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-demo
  template:
    metadata:
      labels:
        app: cloud-demo
    spec:
      containers:
        - name: cloud-demo
          image: quay.io/exbalar/cloud:release
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cloud-demo
    sandbox: learn-kubernetes
    learn-kubernetes: cloud-demo
  name: cloud-demo
spec:
  port:
    targetPort: 8090-tcp
  to:
    kind: Service
    name: cloud-demo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloud-demo
    sandbox: learn-kubernetes
    learn-kubernetes: cloud-demo
  name: cloud-demo
spec:
  ports:
  - name: 8090-tcp
    port: 8090
    protocol: TCP
    targetPort: 8090
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: cloud-demo
  sessionAffinity: None
  type: ClusterIP
