k8/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cloud-demo
    sandbox: learn-kubernetes
    learn-kubernetes: cloud-demo
  name: cloud-demo
spec:
  port:
    targetPort: 8090-tcp
  to:
    kind: Service
    name: cloud-demo
